Added cancelled state

--- a/capabilities/translation/againtalent19519.klipperstatus.de.json
+++ b/capabilities/translation/againtalent19519.klipperstatus.de.json
@@ -18,6 +18,9 @@
 					"paused": {
 						"label": "Pausiert"
 					},
+					"cancelled": {
+						"label": "Abgebrochen"
+					},
 					"error": {
 						"label": "Drucker Fehler"
 					},
