--- a/capabilities/translation/againtalent19519.klipperstatus.en.json
+++ b/capabilities/translation/againtalent19519.klipperstatus.en.json
@@ -18,6 +18,9 @@
 					"paused": {
 						"label": "Paused"
 					},
+					"cancelled": {
+						"label": "Cancelled"
+					},
 					"error": {
 						"label": "Printer Error"
 					},
