--- a/capabilities/translation/againtalent19519.klipperstatus.es.json
+++ b/capabilities/translation/againtalent19519.klipperstatus.es.json
@@ -18,6 +18,9 @@
 					"paused": {
 						"label": "Pausada"
 					},
+					"cancelled": {
+						"label": "Cancelado"
+					},
 					"error": {
 						"label": "Error"
 					},
